--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "twig/twig": "^3.1"
+        "twig/twig": "^3.1",
+        "gilbitron/easycsrf": "^1.2"
     },
     "autoload": {
         "psr-4": {
